--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,15 @@ code {
     monospace;
 }
 
-.arWorldScroll::-webkit-scrollbar {
+.solArWorldScroll::-webkit-scrollbar {
   width: 8px;
 }
 
-.arWorldScroll::-webkit-scrollbar-track {
+.solArWorldScroll::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-.arWorldScroll::-webkit-scrollbar-thumb {
+.solArWorldScroll::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
   border-radius: 4px;
